# samovar

./: .Rbuildignore  .gitignore  Benchmarking.Rmd  DESCRIPTION  LICENSE  LICENSE.md  Misc_functions_reorder.R  NAMESPACE  README.md  R_samova.R  Read2iss.R  SH_samova.R  SH_samova.read  SHamova.R  SHamova.read  Samovar2iss.R  Samovar_function.R  config.json  install.sh  pyproject.toml  raw_generation_script.R  samovaR.Rproj  samovar.html  setup.py
R/: GMrepo_run2data.R  GMrepo_type2data.R  GMrepo_type2run.R  boil.R  build_samova.R  build_samovar_deprecated.R  classes.R  concotion_pour.R  log_plot.R  misc.R  phyloseq.R  prediction.R  progress_bar.R  read.samovar.R  read_samovar.R  samovaR-package.R  samovar_boil.R  samovar_preprocess.R  sample_scale.R  teabag_brew.R  tealeaves_pack.R  tealeaves_package.R  teatree_trim.R  unpack_config.R  viz_annotation.R  viz_composition.R
Rdata/: data_full.RData
demo/: demo.R  demo_data.RData
ipynb/: Metagenomics_data_voting_classifier.ipynb  get_data.ipynb
man/: GMrepo_run.Rd  GMrepo_run2data.Rd  GMrepo_type2data.Rd  GMrepo_type2run.Rd  annotation2samovar.Rd  build_samovar.Rd  concotion_pour.Rd  log_plot.Rd  minmaxscale.Rd  phyloseq2samovar.Rd  progress_function.Rd  read.abundance.Rd  read.samovar.Rd  read_annotation_dir.Rd  read_annotation_table.Rd  read_samovar.Rd  samovaR-package.Rd  samovar2phyloseq.Rd  samovar_base.Rd  samovar_boil.Rd  samovar_data.Rd  samovar_preprocess.Rd  samovar_run.Rd  table2samovar.Rd  teabag_brew.Rd  tealeaves_pack.Rd  teatree_trim.Rd  unpack_config.Rd  viz_annotation.Rd  viz_composition.Rd
project/: pipeline.md
(+134 files in other folders)
