[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "samovar"
version = "0.8.0"
description = "Automated re-profiling and benchmarking with SamovaR"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
authors = [
    {name = "Smutin Daniil", email = "dvsmutin@gmail.com"}
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "ete3>=3.1.3",
    "insilicoseq>2.0.0",
    "scikit-learn>1.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src" 